...
          justifyContent: "center",
          paddingHorizontal: 22,
          paddingTop: 45,
          paddingBottom: 25,
        }}
      >
        <Text style={{ color: theme.text, fontSize: 31, fontWeight: "900", textAlign: "center" }}>หมูจดพร้อมจดแล้ว!</Text>
        <Text
          style={{
            color: theme.text,
            fontSize: 19,
            lineHeight: 28,
            textAlign: "center",
...
